--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
     "next": "16.1.4",
     "next-auth": "^4.24.13",
     "prisma": "^5.10.2",
+    "pusher": "^5.3.2",
+    "pusher-js": "^8.4.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "recharts": "^3.7.0",
+    "resend": "^6.9.1",
+    "use-debounce": "^10.1.0",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0"
   },
